--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
   </head>
   <body>
   	<main role="main">
-  		<section class="jumbotron text-center">
+  		<section class="jumbotron text-center album py-5">
   			<div class="container">
 			    <img src="quebec.png" style="position:absolute; right:10px">
 			    <h1 class="jumbotron-heading">Les meetups Techniques de la ville de Québec</h1>
   			</div>
 
-        <div id="icons" class="row justify-content-md-center"></div>
+        <div class="container">
+          <div id="icons" class="row text-center justify-content-md-center"></div>
+        </div>
   		</section>
 
 	    <div class="album py-5 bg-light">
