--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   		<section class="jumbotron text-center album py-5">
   			<div class="container">
 			    <img src="quebec.png" style="position:absolute; right:10px">
-			    <h1 class="jumbotron-heading">Les meetups Techniques de la ville de Québec</h1>
+			    <h1 class="jumbotron-heading">Les meetups techniques de la Ville de Québec</h1>
   			</div>
 
         <div class="container">
@@ -62,7 +62,7 @@
         <div class="container">
           <div class="row">
           <div class="col-md text-center">
-            <h2>Evénements à venir</h2>
+            <h2>Évènements à venir</h2>
           </div>
           <ol class="row" id="events"><li/></ol>
         </div>
